# Socket-code

./: CMakeCache.txt  CMakeLists.txt  Markdown基本语法.md  Socket_Qt  client  client.cpp  cmake_install.cmake  gpt_socket_qt.cpp  main_qt.cpp  readme.md  server  server.cpp  server_pthread  server_pthread.cpp  server_timu2237.cpp  tips.md  untitled_zh_CN.ts  widget.cpp  widget.h  widget.ui
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
QtCreator/build-server-Desktop_Qt_5_14_2_clang_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  server  server.cbp
QtCreator/build-server-Desktop_Qt_5_14_2_clang_64bit-Debug/server_autogen/EWIEGA46WW/: moc_server.cpp
QtCreator/build-server-Desktop_Qt_5_14_2_clang_64bit-Debug/server_autogen/include/: ui_server.h
QtCreator/build-untitled-Desktop_Qt_5_14_2_clang_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  untitled  untitled.cbp
QtCreator/build-untitled-Desktop_Qt_5_14_2_clang_64bit-Debug/untitled_autogen/EWIEGA46WW/: moc_widget.cpp
QtCreator/build-untitled-Desktop_Qt_5_14_2_clang_64bit-Debug/untitled_autogen/include/: ui_widget.h
QtCreator/build-untitled-Desktop_Qt_5_14_2_clang_64bit-Debug_副本/: CMakeCache.txt  Makefile  cmake_install.cmake  untitled  untitled.cbp
QtCreator/build-untitled-Desktop_Qt_5_14_2_clang_64bit-Debug_副本/untitled_autogen/: moc_predefs.h
QtCreator/build-untitled-Desktop_Qt_5_14_2_clang_64bit-Debug_副本/untitled_autogen/EWIEGA46WW/: moc_widget.cpp
QtCreator/server/: CMakeLists.txt  server.cpp  server.h  server.ui  server_zh_CN.ts
QtCreator_Client/: CMakeLists.txt  QtCreator_Client_zh_CN.ts
QtCreator_Socket/Socket/: CMakeLists.txt  Socket_zh_CN.ts  client.cpp
Socket_Qt_autogen/include/: gpt_socket_qt.moc  gpt_socket_qt.moc.d
Vscode CPP/: CMakeLists.txt  Makefile  client  server_pthread
Vscode CPP/Socket_Qt_autogen/: moc_predefs.h
报告/: 孔馨怡Network_02.doc
(+18 files in other folders)
